--- a/server/package.json
+++ b/server/package.json
@@ -8,24 +8,29 @@
     "build": "tsc -p tsconfig.json",
     "start": "node index.js",
     "dev": "tsnd --respawn --transpile-only --watch . --ignore-watch node_modules --require tsconfig-paths/register index.ts | pino-pretty",
-    "gen": "pnpm drizzle-kit generate --config=drizzle.config.ts"
+    "gen": "pnpm drizzle-kit generate --config=drizzle.config.ts",
+    "mig": "pnpm drizzle-kit migrate"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "fastify": "^5.4.0",
-    "pino-pretty": "^13.0.0",
+    "@fastify/error": "^4.2.0",
     "dotenv": "^17.0.1",
     "drizzle-orm": "^0.44.2",
-    "pg": "^8.16.3"
+    "fastify": "^5.4.0",
+    "pg": "^8.16.3",
+    "pino-pretty": "^13.0.0",
+    "slugify": "^1.6.6",
+    "zod": "^3.25.75",
+    "zod-to-json-schema": "^3.24.6"
   },
   "devDependencies": {
     "@types/node": "^24.0.10",
+    "@types/pg": "^8.15.4",
+    "drizzle-kit": "^0.31.4",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.8.3",
-    "@types/pg": "^8.15.4",
-    "drizzle-kit": "^0.31.4"
+    "typescript": "^5.8.3"
   }
 }
